--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,9 @@ mybatis:
   typeAliasesPackage: com.sqber.personMgr.entity
   mapperLocations: classpath*:/mapping/*.xml
 spring:
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+0
   servlet:
     multipart:
       max-file-size: 100Mb
