spring boot 下 editor.md 的图片上传

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,4 +38,4 @@ logging:
           personMgr:
                   dal: debug
 fileupload:
-  savePath: D:/datamonitor/upload/
+  savePath: c:/personMgr/upload/
