--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,27 @@
             <version>1.2.32</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.xkcoding.justauth/justauth-spring-boot-starter -->
+        <dependency>
+            <groupId>com.xkcoding.justauth</groupId>
+            <artifactId>justauth-spring-boot-starter</artifactId>
+            <version>1.3.5</version>
+        </dependency>
+
+        <!-- HTTPClient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
+            <version>4.5.5</version>
+        </dependency>
+        <!-- HTTPClient -->
+
+
     </dependencies>
 
     <build>
